--- a/src/main/webapp/template/css/estilo-padrao.css
+++ b/src/main/webapp/template/css/estilo-padrao.css
@@ -13,6 +13,29 @@ body {
     padding: 9px 0;
 }
 
+.page-header{
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
+.localizacao-abas{    
+    padding-top: 0px;
+    margin-top: 0px;
+    margin-left: 2px;
+    padding-left: 2px;
+}
+
+.label-required {
+    font-weight:bold;
+}   
+
+.help-inline{
+    margin-top: -10px;
+    padding-bottom: 1px; 
+    color: red; 
+    font-size: 10pt;
+}
+
 @media (max-width: 980px) {
     /* Enable use of floated navbar text */
     .navbar-text.pull-right {
